# daily-wpp-generator

./: LICENSE  README.md  requirements.txt  sample_config.json  setup.cfg  setup.py
wppgen/: __init__.py  chooser.py  config.py  decider.py  filter.py  image_factory.py  image_processor.py  main.py
