[metadata]
name = wppgen
version = 1.0.0
author = Filip Úradník
author_email = filip.uradnik9@gmail.com
description = Generator of dynamic wallpapers dependant on time
long_description = file: README.md
long_description_content_type = text/markdown
keywords = wallpaper generator

[options]
package_dir =
    = .
packages = find:
python_requires = ~=3.7
zip_safe = False
astral = 
    astral ~= 2.2
    Pillow ~= 9.1.1


[options.packages.find]
where = .
